New: Adding tests for workspace details editor

--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,8 @@
     'arc-workspace-requests-mixin-test.html',
     'arc-workspace-dnd-mixin-test.html',
     'arc-workspace-state-mixin-test.html',
-    'export-dialog-test.html'
+    'export-dialog-test.html',
+    'arc-workspace-editor-test.html'
   ]);
   </script>
 </body>
